# backend-api

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: pre-commit.yml
app/: main.py
app/core/: database.py
app/core/settings/: __init__.py  app.py  authentication.py  database.py  util.py
app/rest/common/middleware/: __init__.py
app/rest/common/util/: logger.py
app/rest/v1/domain/entity/: auth.py  user.py
app/rest/v1/domain/model/: __init__.py  user.py
app/rest/v1/presentation/controller/: auth.py  user.py
app/rest/v1/presentation/service/: auth.py  user.py
app/rest/v1/router/: __init__.py  auth.py  user.py
infrastructure/database/migrations/: env.py
infrastructure/database/migrations/versions/: 90acd220358b_first_migration.py
infrastructure/docker/: Dockerfile  docker-compose.yaml
