[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = "A Simple Python Backend API"
authors = ["Urich Oliveira <oliveira.urich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
python-dotenv = "^0.20.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
