[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = "A Simple Python Backend API"
authors = ["Urich Oliveira <oliveira.urich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
arrow = "^1.2.2"
python-jose = "^3.3.0"
psycopg2 = "^2.9.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
python-dotenv = "^0.20.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "*_test.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.isort]
profile = "black"

[tool.coverage]
[tool.coverage.run]
# omit anything in a .local directory anywhere
omit = [
    '*__init__.py',
]

[tool.coverage.report]
skip_empty = true
skip_covered = true